# react-flask-shop-app

./: .bowerrc  .gitignore  Dockerfile  Pipfile  README.md  bower.json  manage.py  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/templates/: base.html
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: Footer.tsx  NavBar.tsx  NavigationBar.tsx
frontend/pages/: _app.tsx  index.tsx  shop.tsx
frontend/src/: App.js  index.js
frontend/src/pages/: Home.js  Shop.js
rfs/: app.py  config.py  extensions.py  webassets_filters.py
rfs/cart/: cart.py  models.py  views.py
rfs/cart/static/jsx/: cart.js
rfs/commands/: __init__.py  initdb.py
rfs/orders/: __init__.py  models.py  views.py
rfs/orders/static/jsx/: cart.js  product.js
rfs/products/: __init__.py  admin.py  api.py  models.py  schema.py  views.py
rfs/products/static/jsx/: product.js
rfs/spec/: swagger.yml
rfs/static/js/: app.js
rfs/static/jsx/: app.js
rfs/templates/: base.html  index.html
